--- a/src/styles/test.css
+++ b/src/styles/test.css
@@ -1,7 +1,3 @@
-body {
-  font-family: "Pretendard", sans-serif;
-}
-
 :root {
   --blue: #5849df;
   --light-blue: #7363ff;
@@ -80,7 +76,6 @@ body {
   background-color: var(--light-gray);
   color: var(--blue);
   padding: 0;
-  font-family: "Pretendard", sans-serif;
   font-size: 20px;
   font-weight: 400;
   letter-spacing: -0.3px;
@@ -90,7 +85,6 @@ body {
 }
 .test-input::placeholder {
   color: #a0a0a0;
-  font-family: "Pretendard", sans-serif;
   font-size: 20px;
   font-weight: 300;
   letter-spacing: -0.3px;
@@ -105,7 +99,6 @@ body {
 .test-next-button {
   background-color: var(--blue);
   color: white;
-  font-family: "Pretendard", sans-serif;
   font-size: 24px;
   font-weight: 600;
   letter-spacing: -0.3px;
